@@ -1,3 +1,5 @@
+  * Added jungle tree texture data from weekly 12w03a
+
 Minecraft X-Ray 3.5.1 (2012.01.15)
 
   * "Other" option on world-opening dialog should work more than once
